compiler/fir/analysis-tests/testData/resolveWithStdlib/incorrectLabelReference.kt
// ISSUE: KT-58439

fun myMap(x: Int = @<!UNRESOLVED_REFERENCE!>someLabel<!><!SYNTAX!><!>)

val y = (<!SYNTAX!><!SYNTAX!><!>:)<!>
